infra/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sercop-api
  labels:
    app: sercop-api
spec:
  type: ClusterIP
  ports:
    - port: 3080
      targetPort: 3080
      protocol: TCP
      name: http
  selector:
    app: sercop-api
